Add draft content, styles, and syntax highlighting.

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ feed_filenames = ["rss.xml"]
 [markdown]
 highlight_code = true
 highlight_theme = "two-dark"
+extra_syntaxes_and_themes = ["syntaxes"]
 
 [extra]
 default_title = "HUML :: Human-oriented Markup Language"
